--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
 
+  # For signIn and authentication
+  firebase_auth: ^3.0.1
+  google_sign_in: ^5.0.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
