--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,16 @@ environment:
   sdk: ">=2.19.5 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.2
+  firebase_auth: ^4.4.1
+  firebase_core: ^2.9.0
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-
-  #For signIn and authentication
-  firebase_auth: ^4.4.1
   google_sign_in: ^6.1.0
+  provider: ^6.0.5
 
 dev_dependencies:
+  dart_code_metrics: ^5.7.2
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
