--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
   sdk: ">=2.19.5 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^4.5.2
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.4.1
   firebase_core: ^2.9.0
