--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,13 @@ dependencies:
   firebase_core: ^2.9.0
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.2.19
   google_sign_in: ^6.1.0
   provider: ^6.0.5
 
 dev_dependencies:
   dart_code_metrics: ^5.7.2
+  flutter_launcher_icons: ^0.13.1
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
@@ -34,3 +36,18 @@ flutter:
     - family: Poppins
       fonts:
         - asset: assets/fonts/Poppins-Regular.ttf
+
+# Launcher icon
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/launcher.png"
+  min_sdk_android: 21
+  remove_alpha_ios: true
+
+# Splash screen
+flutter_native_splash:
+  color: "#ffffff"
+  image: "assets/icons/splash.png"
+  fullscreen: true
+  web: false
